--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
 
-  <title>Document</title>
-  <script defer src="https://friconix.com/cdn/friconix.js"> </script>
+  <title>Background Video</title>
 </head>
 
 <body>
-<script src="./js/index.js"></script>
+  <!-- Container -->
+  <div class="container">
+    <!-- Video -->
+    <div><video id="video" src="./img/background.mp4" autoplay loop muted type="video/mp4"></div>
+    <!-- Title -->
+    <h1>Video Project</h1>
+    <!-- Button -->
+    <button id="button"><span id="play" class="hidden">Play</span><span id="pause">Pause</span></button></video>
+    <!-- Opacity Div -->
+    <div class="opacity"></div>
+  </div>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
